src/objects/Joint_Business_Plan_Actions__c.object
<CustomObject>
    <description>R5 - Joint Business Plan Actions</description>
    <fields>
        <fullName>ABB_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 -ABB Responsible</description>
        <inlineHelpText>ABB person responsible to execute, support and/or follow-up this action</inlineHelpText>
        <label>ABB Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Joint_Business_Plan_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Description__c</fullName>
        <description>R5 - Action Description</description>
        <inlineHelpText>It is a good practice to add 2-4 sentences to describe the details of the action. The description can be updated later if necessary</inlineHelpText>
        <label>Action Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <description>R5 - Actual End Date</description>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments1__c</fullName>
        <description>It is created for X-Author Temple</description>
        <inlineHelpText>Description on status etc. on the level practical</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>R5 - Comments</description>
        <inlineHelpText>Additional description relative to action status, progress, etc.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <description>R5 - Deadline</description>
        <inlineHelpText>Targeted due date for the action. Can be updated as mutually agreed.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <description>R5 - Master-Detail Relationship to Joint Business Plan</description>
        <inlineHelpText>Business plan this market scope is connected to</inlineHelpText>
        <label>Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipName>Joint_Business_Plan_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Late__c</fullName>
        <formula>IF (Deadline__c &lt; Today(), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Development_Fund_Action__c</fullName>
        <description>R5 - Market Development Fund Action</description>
        <inlineHelpText>Select Yes in case this action is defined as part of market development fund. (Not available in all businesses and/ or all countries)</inlineHelpText>
        <label>Market Development Fund Action</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 -. Partner Responsible</description>
        <inlineHelpText>Partner responsible to execute, support and/or follow-up this action</inlineHelpText>
        <label>Partner Responsible</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Joint_Business_Plan_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <description>R5 - Copies Primary Address Country from Account .</description>
        <formula>TEXT( Joint_Business_Plan__r.Account__r.Primary_Address_Country__c )</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>R5 - Priority</description>
        <inlineHelpText>Choose priority of this action compared to other actions. Helps allocating resources.</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>R5 -Registered</description>
        <inlineHelpText>The date this action was originally registered into the tool</inlineHelpText>
        <label>Registered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>R5 - Status</description>
        <inlineHelpText>&quot;On Hold&quot; - action is parked (Specify why under &quot;Comments&quot; section); &quot;Completed&quot; - action completed; &quot;Cancelled&quot; - Specify why under &quot;Comments&quot; section</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Joint_Business_Plan__c</columns>
        <columns>Status__c</columns>
        <columns>ABB_Responsible__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <recordTypes>
        <fullName>Focused_sales</fullName>
        <active>true</active>
        <description>Sales actions focusing on a specific customer</description>
        <label>1.Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_sales</fullName>
        <active>true</active>
        <description>Campaigns, preparation of sales support material, specifictions and homologation etc.</description>
        <label>2. Marketing and Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing</fullName>
        <active>true</active>
        <description>Trade fairs, road shows, technical lunches or other events arranged or attended in relation to ABB offering</description>
        <label>3. Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Any other type of Actions</description>
        <label>5. Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <description>Action related to training,personal authorization or company authorization or company audit</description>
        <label>4. Training &amp; Authorization</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ActualEndDategreaterthan_Registered_Date</fullName>
        <active>true</active>
        <description>R5 Actual End Date greater than registered date</description>
        <errorConditionFormula>Actual_End_Date__c &lt; Registered__c</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>Actual End Date must be greater than Registered Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deadline_greater_than_Registered_Date</fullName>
        <active>true</active>
        <description>R5 - Deadline must be always greater than Registered Date.</description>
        <errorConditionFormula>Deadline__c  &lt;  Registered__c</errorConditionFormula>
        <errorDisplayField>Deadline__c</errorDisplayField>
        <errorMessage>Deadline must be greater than Registered Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JBP_Status_Closed_Check_Actions</fullName>
        <active>true</active>
        <description>R5 - If Channel Partner Business Plan Status is Closed/Obsolete, then the user should not edit the Action record</description>
        <errorConditionFormula>OR(ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Closed&apos;), 
ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Obsolete&apos;) 
)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Business Plan is Closed/Obsolete</errorMessage>
    </validationRules>
</CustomObject>